examples/test/testpolicy4622.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4622
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key34: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value31
          key13: value49
          key24: value15
      podSelector:
        matchLabels:
          key26: value13
          key13: value8
